--- a/404.html
+++ b/404.html
@@ -15,6 +15,9 @@
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+
+    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively."> 
+     
     <title>Navi Promotions - 404</title>
 </head>
 
@@ -109,7 +112,7 @@
         <!-- 404 -->
         <div class="mil-dark-bg mil-add-page">
             <div class="mil-deco mil-deco-accent" style="top: 40vh; right: 10%; transform: rotate(90deg)"></div>
-            <img src="img/deco/map.png" alt="background" class="mil-map-bg">
+            <img src="img/images/map.webp" alt="background" class="mil-map-bg">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4">
