--- a/terms-condition.html
+++ b/terms-condition.html
@@ -16,6 +16,7 @@
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Navi Promotions - Terms and Condition</title>
+    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
 </head>
 
 <body>
@@ -108,7 +109,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-background-image">
+            <img src="img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -116,7 +117,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="faq.html">Terms and Condition</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Terms and Condition</h2>
+                    <h1 class="mil-uppercase">Terms and Condition</h1>
                 </div>
             </div>
         </div>
@@ -230,7 +231,7 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-footer-bg">
+            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
