--- a/blog6.html
+++ b/blog6.html
@@ -13,6 +13,9 @@
     <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
+
+
+    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Navi Promotions - Blog</title>
@@ -89,7 +92,7 @@
                     <div class="col-lg-8 col-xl-8 mil-mb-120">
 
                         <span class="mil-suptitle mil-accent mil-mb-30">SEO and Content</span>
-                        <h3 class="mil-up-font mil-mb-30">SEO and Content: The Ultimate Growth Formula</h3>
+                        <h1 class="mil-up-font mil-mb-30">SEO and Content: The Ultimate Growth Formula</h1>
                         <!-- <ul class="mil-dot-list mil-post-info mil-text-sm mil-mb-60">
                             <li class="mil-post-author"><img src="img/faces/3.jpg" alt="Author"><span>Marketing Expert</span></li>
                             <li>29 Oct. 2023</li>
@@ -229,7 +232,7 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-footer-bg">
+            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
