--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
+
+    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
+    
     <title>Navi Promotions - Portfolio</title>
 </head>
 
@@ -108,7 +111,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-background-image">
+            <img src="img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -116,7 +119,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Projects</h2>
+                    <h1 class="mil-uppercase">Projects</h1>
                 </div>
             </div>
         </div>
@@ -124,7 +127,11 @@
 
         <!-- portfolio -->
         <section class="mil-p-120-120">
+
+            
             <div class="container">
+
+
 
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 mil-mb-60">
@@ -243,7 +250,7 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-footer-bg">
+            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
