--- a/project5.html
+++ b/project5.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
+    
     <title>Navi Promotions - Project</title>
 </head>
 
@@ -108,7 +110,7 @@
 
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-background-image">
+            <img src="img/images/map.webp" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
@@ -116,7 +118,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Web Application for RG Dental Care</h2>
+                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
                 </div>
             </div>
         </div>
@@ -150,7 +152,7 @@
                     </div>
                     <div class="col-lg-7 col-xl-8">
 
-                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Project Overview</span>
+                        <h1 class="mil-list-title mil-mb-30">Project Overview</h1>
                         <h3 class="mil-mb-30">Challenge</h3>
                         <p class="mil-mb-60">
                             RG Dental Care needed a responsive and SEO-optimized web application to effectively showcase their dental services, treatment options, and patient care information. The platform had to provide a user-friendly experience, allowing patients to explore services, book appointments, and learn about dental care procedures. The key challenges included creating an intuitive UI, optimizing for mobile users, and ensuring SEO strategies for better visibility.
@@ -390,7 +392,7 @@
 
         <!-- footer -->
         <footer class="mil-dark-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-footer-bg">
+            <img src="img/images/map.webp" alt="background" class="mil-footer-bg">
             <div class="container">
                 <div class="mil-footer-content mil-p-120-90">
                     <div class="row justify-content-between align-items-center">
