--- a/404.html
+++ b/404.html
@@ -15,6 +15,10 @@
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
+    <link rel="canonical" href="https://navipromotions.in/404.html">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+
 
     <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively."> 
      
@@ -53,9 +57,9 @@
                                 <li><a href="about.html">About us</a></li>
 
                                 <li>
-                                    <a href="service-1.html">Services</a>
+                                    <a href="services.html">Services</a>
                                     <!-- <ul>
-                                        <li><a href="service-1.html">Service 1</a></li>
+                                        <li><a href="services.html">Service 1</a></li>
                                         <li><a href="service-2.html">Service 2</a></li>
                                         <li><a href="service-3.html">Service 3</a></li>
                                         <li><a href="service-4.html">Service 4</a></li>
