--- a/about.html
+++ b/about.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="canonical" href="https://navipromotions.in/about.html">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
@@ -58,9 +62,9 @@
                                 <li><a href="about.html">About us</a></li>
 
                                 <li>
-                                    <a href="service-1.html">Services</a>
+                                    <a href="services.html">Services</a>
                                     <!-- <ul>
-                                        <li><a href="service-1.html">Service 1</a></li>
+                                        <li><a href="services.html">Service 1</a></li>
                                         <li><a href="service-2.html">Service 2</a></li>
                                         <li><a href="service-3.html">Service 3</a></li>
                                         <li><a href="service-4.html">Service 4</a></li>
@@ -122,7 +126,7 @@
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="service-1.html">About Us</a></li>
+                        <li><a href="services.html">About Us</a></li>
                     </ul>
                     <h1 class="mil-uppercase">About Us</h1>
                 </div>
