--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,13 @@
     <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
     <!-- swiper css -->
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="canonical" href="https://navipromotions.in/contact.html">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
 
+    <meta http-equiv="X-Frame-Options" content="DENY">
     <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
 
-    
+
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Navi Promotions - Contact</title>
@@ -54,7 +57,7 @@
                                 <li><a href="about.html">About us</a></li>
 
                                 <li>
-                                    <a href="service-1.html">Services</a>
+                                    <a href="services.html">Services</a>
                                     <!-- <ul>
                                         <li><a href="service-1.html">Service 1</a></li>
                                         <li><a href="service-2.html">Service 2</a></li>
@@ -131,7 +134,7 @@
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-lg-8 col-xl-8 mil-mb-120">
-                        <form id="formContact" method="post" enctype="multipart/form-data">
+                        <form id="formContact" enctype="multipart/form-data">
                             <h4 class="mil-mb-60"><span class="mil-accent">Contact Us</span></h4>
                         
                             <div class="row">
@@ -292,7 +295,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="img/logo/navi-logo web manju.png" alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
 
