--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <meta http-equiv="X-Frame-Options" content="DENY">
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
@@ -15,8 +15,11 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="canonical" href="https://navipromotions.in/services.html">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
     <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-    
+
     <title>Navi Promotions - Services</title>
 </head>
 
@@ -53,9 +56,9 @@
                                 <li><a href="about.html">About us</a></li>
 
                                 <li>
-                                    <a href="service-1.html">Services</a>
+                                    <a href="services.html">Services</a>
                                     <!-- <ul>
-                                        <li><a href="service-1.html">Service 1</a></li>
+                                        <li><a href="services.html">Service 1</a></li>
                                         <li><a href="service-2.html">Service 2</a></li>
                                         <li><a href="service-3.html">Service 3</a></li>
                                         <li><a href="service-4.html">Service 4</a></li>
@@ -117,7 +120,7 @@
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="service-1.html">Service</a></li>
+                        <li><a href="services.html">Service</a></li>
                     </ul>
                     <h1 class="mil-uppercase">Services</h1>
                 </div>
@@ -629,7 +632,7 @@
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-4 mil-mb-30">
 
-                            <img src="img/logo/navi-logo web manju.png" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
+                            <img src="img/logo/navi-logo web manju.png"  alt="logo" class="mil-logo mil-mb-30" style="width: 300px; margin-top: 15px;" >
 
 
                             <p class="mil-light-soft mil-mb-30" style="text-align: justify;">At Navi Promotions, we specialize in crafting impactful marketing strategies, cutting-edge digital solutions, and powerful branding to help businesses grow. Our expertise spans web development, social media marketing, SEO, and more, ensuring your brand stands out in the competitive market.</p>
