--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
 
 
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively."> 
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
      
     <title>Navi Promotions - 404</title>
 </head>
