--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
 
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
     
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
-    <title>Navi Promotions - About</title>
+    <title>Navi Promotions - About Us and Our Vision</title>
 </head>
 
 <body>
@@ -215,7 +215,7 @@
                             <div class="col-xl-5">
 
                                 <a href="#." class="mil-post-sm mil-mb-60">
-                                    <div class="mil-cover-frame"><img src="img/images/vishnu.jpg" alt="cover"></div>
+                                    <div class="mil-cover-frame"><img src="img/images/vishnu.webp" alt="cover"></div>
                                     <div class="mil-description">
                                         <h5 class="mil-font-3 mil-accent">Naga Vishnu</h5>
                                         <p class="mil-text-sm">CEO & Founder</p>
