--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,11 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
 
     <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Navi Promotions - Contact</title>
-</head>
+    Navi Promotions - Get in Touch with Us</head>
 
 <body>
 
