--- a/project4.html
+++ b/project4.html
@@ -18,9 +18,8 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <link rel="canonical" href="https://navipromotions.in/project4.html">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
-    <title>Navi Promotions - Alagu Gym</title>
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    <title>Navi Promotions - Alagu Gym Web Application</title>
 </head>
 
 <body>
