--- a/services.html
+++ b/services.html
@@ -18,10 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/services.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
-    <title>Navi Promotions - Services</title>
-</head>
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    Navi Promotions - Our Services and Solutions</head>
 
 <body>
 
