--- a/terms-condition.html
+++ b/terms-condition.html
@@ -20,8 +20,7 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
 
     <link rel="canonical" href="https://navipromotions.in/terms-condition.html">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-</head>
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence."></head>
 
 <body>
 
@@ -119,7 +118,7 @@
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="faq.html">Terms and Condition</a></li>
+                        <li><a href="terms-condition.html">Terms and Condition</a></li>
                     </ul>
                     <h1 class="mil-uppercase">Terms and Condition</h1>
                 </div>
