--- a/blog2.html
+++ b/blog2.html
@@ -16,8 +16,7 @@
     <link rel="canonical" href="https://navipromotions.in/blog2.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-    <!-- itsulu css -->
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Navi Promotions - Maximizing Engagement with Social Media Strategies</title>
 </head>
@@ -166,7 +165,7 @@
                             <h5 class="mil-list-title mil-mb-30">About Navi Promotions</h5>
                             <p class="mil-mb-30">Navi Promotions is a dynamic marketing agency specializing in digital marketing, outdoor advertising, event promotions, and branding solutions. We help businesses enhance their visibility and connect with their target audience effectively.</p>
                             <a href="#." class="mil-post-sm mil-mb-15">
-                                <div class="mil-cover-frame"><img src="img/images/vishnu.jpg" alt="cover"></div>
+                                <div class="mil-cover-frame"><img src="img/images/vishnu.webp" alt="cover"></div>
                                 <div class="mil-description">
                                     <h4 class="mil-font-3 mil-accent">Naga Vishnu</h4>
                                     <p class="mil-text-sm">CEO & Founder</p>
