--- a/careers.html
+++ b/careers.html
@@ -16,11 +16,9 @@
     <link rel="canonical" href="https://navipromotions.in/careers.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-    <!-- itsulu css -->
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Navi Promotions - Careers</title>
-</head>
+    Navi Promotions - Careers and Opportunities</head>
 
 <body>
 
