--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
 
     <link rel="icon" type="image/png" href="img/logo/icon-logo.png"> 
 
-    <link rel="canonical" href="https://navipromotions.in/">
+    <link rel="canonical" href="https://navipromotions.in/index.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
 
 
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
 
     <title>Navi Promotions - Home</title>
 </head>
