--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,8 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
-    <title>Navi Promotions - Portfolio</title>
-</head>
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    Navi Promotions - Portfolio and Projects</head>
 
 <body>
 
