--- a/project1.html
+++ b/project1.html
@@ -18,9 +18,8 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://navipromotions.in/project1.html">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
-    <title>Navi Promotions - Pixel cctv</title>
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    <title>Navi Promotions - Pixel cctv web application</title>
 </head>
 
 <body>
