--- a/project2.html
+++ b/project2.html
@@ -18,8 +18,7 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
     <link rel="canonical" href="https://navipromotions.in/project2.html">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
     <title>Navi Promotions - Xenex Engineering & Process Pte Ltd</title>
 </head>
 
