--- a/project3.html
+++ b/project3.html
@@ -18,8 +18,7 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://navipromotions.in/project3.html">
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
     <title>Navi Promotions - Tamilsangu Publication</title>
 </head>
 
