--- a/project5.html
+++ b/project5.html
@@ -18,8 +18,7 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers expert digital marketing, branding, and promotional services to help businesses grow their online presence and reach their target audience effectively.">
-
+    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
     <title>Navi Promotions - RG Dental Care</title>
 </head>
 
